# curso-fullstack-sti

./: README.md
projeto-api/: .gitignore  README.md  pyproject.toml
projeto-api/migrations/: env.py
projeto-api/migrations/versions/: 644aa68d645d_create_users_table.py  7429162dff5e_create_users_table.py
projeto-api/projeto_api/: app.py  database.py  schemas.py  security.py
projeto-api/projeto_api/routers/: auth.py  users.py
projeto-api/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
projeto-ui/: README.md
